--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,6 @@ body {
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  pointer-events: none;
 }
 
 @keyframes App-logo-spin {
@@ -37,8 +36,13 @@ body {
   }
 }
 
+.App-logo:hover{
+  font-weight: bold;
+  color: #08E4AB;
+}
+
 .search{
-  width: 59%;
+  width: 63%;
   padding:0;
   margin-left: auto;
   margin-right: auto;
@@ -56,6 +60,16 @@ body {
   padding-bottom: 5em;
 }
 
+.hovered:hover{
+  font-weight: bold;
+  color: #08E4AB;
+}
+
+.highlighted{
+  font-weight: bold;
+  color: #08E4AB;
+}
+
 .footer {
   position: fixed;
   bottom: 0;
@@ -64,4 +78,13 @@ body {
   line-height: 60px; /* Vertically center the text there */
   text-align: center;
   background-color: #f5f5f5;
+}
+
+.flip{
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip:hover{
+  transform: rotateY(180deg);
 }
